src/scss/components.scss
#navbar {
  width: 100%;
  background: #fff;
  img {
    height: 30px;
    margin: 15px;
  }
}

#content {
  padding-top: 20px;
  display: flex;
  height: 100%;

}
#sidebar {
  background: #fff;
  margin: 20px 10px;
  flex-grow: 1;
  width: 15vw;
  min-width: 200px;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  img {
    margin: 15px;
    width: 180px;
  }
  h3 {
    margin-bottom: 0;
  }
  p {
    color: #999;
    font-size: 12px;
    padding: 0 10px;
  }
  #tags {
    border-top: 1px solid #eee;
    border-bottom: 1px solid #eee;
    padding: 10px 10px;
    text-align: left;
    button {
      box-shadow: 0;
      border: 1px solid #eee;
      border-radius: 5px;
      font-family: 'Century Gothic';
      padding: 2px 10px;
      margin: 5px;
    }
  }
  #menu {
    width: 100%;
    div.menu {
      text-align: left;
      padding: 20px 20px;
      text-transform: uppercase;
      font-weight: 800;
      color: #ccc;
      font-size: 14px;
    }
    div.menu:hover, div.menu.active {
      color: #000;
    }
  }
}

#right {
  margin: 20px 10px;
  flex-grow: 2;

  #retail-sales {
    background: #fff;
    margin-bottom: 40px;
    padding: 10px;
    h3 {
      font-weight: normal;
      margin: 0;
      padding: 20px;
    }
    div.chart-container {
      position: relative;
      width: 100%;
    }
  }

  #table {
    background: #fff;
    padding: 20px;
    font-size: 12px;
    table {
      width: 100%;
    }
    th {
      text-align: center;
      padding: 10px 0;
    }
    td {
      text-align: center;
      padding: 5px 0;
      color: #999;
    }
    
  }
}

